# mergesort

./: CMakeLists.txt  README.md  msort.c  msort.h
